--- a/app/views/blox/_footer.html.erb
+++ b/app/views/blox/_footer.html.erb
@@ -1,7 +1,6 @@
-<!-- Footer -->
-<footer class="py-5 bg-dark fixed-bottom">
-  <div class="container">
-    <p class="m-0 text-center text-white ">Copyright &copy; Your Website 2019</p>
+<footer class="mastfoot mt-auto">
+  <div class="inner">
+    <p>Project template for <a href="https://gastronomic.online">GastroDev</a>.</p>
+    <p class="m-0 text-center text-white ">Copyright &copy; Gastronomic LLC 2020</p>
   </div>
-  <!-- /.container -->
 </footer>
