--- a/app/views/blox/_navbar.html.erb
+++ b/app/views/blox/_navbar.html.erb
@@ -1,27 +1,19 @@
 <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">NextBenDev</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="pages/home">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="pages/login">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="pages/message">Messages</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="pages/profile">Profile</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<header class="masthead mb-auto">
+  <div class="inner">
+    <h3 class="masthead-brand">GastroDev</h3>
+    <nav class="nav nav-masthead justify-content-center">
+      <ul class="navbar navbar-dark bg-dark"  style="list-style-type:none">
+        <li class="nav-item">
+          <p><%= link_to "Home", root_path, :class => "nav-link active" %></p>
+        </li>
+        <li class="nav-item">
+          <p><%= link_to "Profile", pages_profile_url, :class => "nav-link" %></p>
+        </li>
+        <li class="nav-item">
+          <p><%= link_to "Log In", pages_login_url, :class => "nav-link" %></p>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</header>
