--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,20 @@
 
   </head>
 
+
   <body class="text-center">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <%=render "blox/navbar" %>
+
+
+
+
+
 
 
     <%= yield %>
+    <%=render "blox/footer" %>
+  </div>
+
   </body>
 </html>
