--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -1,3 +1,6 @@
+<div class="text-center">
+
+
 <form class="form-signin">
   <img class="mb-4" src="/docs/4.4/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
   <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
@@ -13,3 +16,4 @@
   <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
   <p class="mt-5 mb-3 text-muted">&copy; 2017-2019</p>
 </form>
+</div>
