--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,8 @@
       <%=render "blox/navbar" %>
 
 
-
-
-
-
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
     <%= yield %>
     <%=render "blox/footer" %>
